# HikariCore

./: CMakeLists.txt  Flattening.cpp  FunctionCallObfuscate.cpp  FunctionWrapper.cpp  LICENSE.md  README.md  StringEncryption.cpp
include/Obfuscation/: BogusControlFlow.h  Flattening.h  Obfuscation.h  Split.h  Substitution.h
src/: CryptoUtils.cpp  Dummy.cpp  LegacyLowerSwitch.cpp  PassScheduler.cpp  Utils.cpp
src/AddPasses/: Loader_AppleClang.cpp  Loader_Hook.cpp  Register_Passes.cpp
src/Passes/: AntiClassDump.cpp  BogusControlFlow.cpp  Flattening.cpp  FunctionCallObfuscate.cpp  FunctionWrapper.cpp  IndirectBranch.cpp  SplitBasicBlocks.cpp  StringEncryption.cpp  Substitution.cpp
test/: hello.c
